tests/spec/non_conformant/errors/invalid_parent/function_in_each.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-parent/function-in-each.hrx"

// Ignoring "test", error tests are not supported yet.
